fix: use language-specific SonarQube LCOV coverage parameters
Replace generic sonar.coverageReportPaths with language-specific parameters:
- Backend (Rust): sonar.rust.lcov.reportPaths
- Frontend (JavaScript/TypeScript): sonar.javascript.lcov.reportPaths

This resolves SonarQube parsing errors where LCOV files were incorrectly
being parsed as generic XML format. Language-specific parameters correctly
identify LCOV format for proper coverage report processing.

Fixes SonarQube frontend workflow parsing error and ensures coverage metrics
are properly imported into SonarQube dashboards for both backend and frontend.

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -136,7 +136,7 @@ jobs:
         with:
           args: >
             -Dsonar.projectBaseDir=portfolio/api
-            -Dsonar.coverageReportPaths=target/coverage/lcov.info
+            -Dsonar.rust.lcov.reportPaths=target/coverage/lcov.info
             -Dsonar.coverage.exclusions=tests/**,benches/**
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -223,7 +223,7 @@ jobs:
         with:
           args: >
             -Dsonar.projectBaseDir=portfolio/web
-            -Dsonar.coverageReportPaths=coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,**/node_modules/**,**/.astro/**
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
